fetch to get logged in user and show destinations added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <!-- display all destinations -->
       <div id="destinationsContainer"></div>
-      <a href="/addDestination.html"><button id="addDestinationButton" name="addDestinationButton">Add a new destination</button></a>
+      <a href="addDestination.html"><button id="addDestinationButton" name="addDestinationButton">Add a new destination</button></a>
     </main>
     <footer></footer>
   </body>
