--- a/formsPage.html
+++ b/formsPage.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add your travel destination</title>
-    <script src="formsAction.js" type="module"></script>
-    <!-- <script src="script.js" type="module"></script> -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header><h1>Add your travel destination</h1></header>
-    <main>
-      <!-- display when the user is signed in or logged in (logInStatus has to be true)  -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Add destination</title>
+  <script src="formsAction.js" type="module"></script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main id="main-form-container">
+    <div id="form-section">
+      <h1>Add your travel destination</h1>
       <div id="addDestinationContainer" class="formContainer">
         <form id="addDestinationForm">
           <legend>Add a new destination</legend>
-          <div>
+          <div class="input-container">
+            <label for="destinationTitle">Title</label>
             <input type="text" id="destinationTitle" placeholder="Title" required />
           </div>
-          <div>
+          <div class="input-container">
+            <label for="destinationDescription">Description</label>
             <input type="text" id="destinationDescription" placeholder="Description" required />
           </div>
-          <div>
+          <div class="input-container">
+            <label for="destinationImageUrl">Image URL</label>
             <input type="text" id="destinationImageUrl" placeholder="Image URL" />
           </div>
-          <div>
+          <div class="input-container">
+            <label for="destinationWikiLink">Wikipedia Link</label>
             <input type="text" id="destinationWikiLink" placeholder="Wikipedia Link" />
           </div>
-          <div>
+          <div class="input-container">
+            <label for="destinationTag">Tag</label>
             <input type="text" id="destinationTag" placeholder="Tag" />
           </div>
           <div>
-            <input type="submit" value="Create now" />
+            <button type="submit" value="Create now">Create now</button>
           </div>
         </form>
       </div>
 
-      <!-- display when user is NOT signed in (logInStatus is false)-->
       <div id="userAccessContainer" class="formContainer">
         <div>
           <p id="signInMessage">Please sign in to add a new destination</p>
@@ -44,38 +49,50 @@
         <div id="signInContainer">
           <form id="signInForm">
             <legend>Sign in</legend>
-            <div>
-              <input type="email" id="userEmail" placeholder="Email" required />
+            <div class="input-container">
+              <label for="userEmail">Email</label>
+              <input type="email" id="userEmail" placeholder="Enter your email" required />
+            </div>
+            <div class="input-container">
+              <label for="userPassword">Password</label>
+              <input type="password" id="userPassword" placeholder="Enter your password" required />
             </div>
             <div>
-              <input type="password" id="userPassword" placeholder="Password" required />
-            </div>
-            <div>
-              <input type="submit" value="Sign in" />
+              <button class="login-button" type="submit" value="Sign in">Sign in</button>
             </div>
           </form>
         </div>
         <div id="registerContainer">
-          <p id="registerMessage">Don't have an account?</p>
-          <button id="registerButton" name="register">Register now</button>
+          <div class="register-message-container">
+            <p id="registerMessage">Don't have an account?</p>
+            <button id="registerButton" name="register">Register now</button>
+          </div>
           <form id="registerForm" class="hidden">
             <legend>Register your account</legend>
-            <div>
-              <input type="text" id="newUsername" name="username" placeholder="Username" required />
+            <div class="input-container">
+              <label for="newUsername">Username</label>
+              <input type="text" id="newUsername" name="username" placeholder="Enter your username" required />
+            </div>
+            <div class="input-container">
+              <label for="newUserEmail">Email</label>
+              <input type="email" id="newUserEmail" name="email" placeholder="Enter your email" required />
+            </div>
+            <div class="input-container">
+              <label for="newUserPassword">Password</label>
+              <input type="password" id="newUserPassword" name="password" placeholder="Create a Password" required />
             </div>
             <div>
-              <input type="email" id="newUserEmail" name="email" placeholder="Email" required />
-            </div>
-            <div>
-              <input type="password" id="newUserPassword" name="password" placeholder="Password" required />
-            </div>
-            <div>
-              <input type="submit" value="Register" />
+              <button class="login-button" type="submit" value="Register">Register</button>
             </div>
           </form>
         </div>
       </div>
-    </main>
-    <footer></footer>
-  </body>
+    </div>
+    <div id="image-section">
+      <img id="login-picture" src="/Pictures/demo-pic.jpg" alt="demo-pic" />
+    </div>
+  </main>
+  <footer></footer>
+</body>
+
 </html>
